geonode.maptiles.templates.maptiles.maptiles_geoext_map.html added //philippine extent andrestrictedExtent: extent in OpenLayers.Map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -497,11 +497,6 @@ Ext.onReady(function (){
 
     var juris_vec_layer = new OpenLayers.Layer.Vector();
 
-    //philippine extent
-    var extent = new OpenLayers.Bounds(8, 44.5, 19, 50);
-    var options = {
-      restrictedExtent: extent
-    };
     //definition of the Philippine grid layer
     var grid_layer_name = "geonode:{{  feature_tiled }}";
 
@@ -511,7 +506,7 @@ Ext.onReady(function (){
         units: map_options["units"],
         maxResolution: map_options["maxResolution"],
         projection: map_options["projection"]
-    },options);
+    });
 
     //definition of the world map layer
     var mq_layer = new OpenLayers.Layer.XYZ(
@@ -576,7 +571,7 @@ Ext.onReady(function (){
             },
             {
                 buffer: 0,
-                displayOutsideMaxExtent: false,
+                displayOutsideMaxExtent: true,
                 isBaseLayer: false,
                 projection: "EPSG:32651",
                 maxExtent: new OpenLayers.Bounds(j_layer["bbox"])
