--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -497,6 +497,8 @@ Ext.onReady(function (){
 
     var juris_vec_layer = new OpenLayers.Layer.Vector();
 
+    //philippine extent
+    var extent = new OpenLayers.Bounds(8, 44.5, 19, 50);
     //definition of the Philippine grid layer
     var grid_layer_name = "geonode:{{  feature_tiled }}";
 
@@ -505,7 +507,8 @@ Ext.onReady(function (){
     map = new OpenLayers.Map({
         units: map_options["units"],
         maxResolution: map_options["maxResolution"],
-        projection: map_options["projection"]
+        projection: map_options["projection"],
+        restrictedExtent: extent
     });
 
     //definition of the world map layer
