--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -497,8 +497,6 @@ Ext.onReady(function (){
 
     var juris_vec_layer = new OpenLayers.Layer.Vector();
 
-    //philippine extent
-    var extent = new OpenLayers.Bounds(0, 0, 100, 100);
     //definition of the Philippine grid layer
     var grid_layer_name = "geonode:{{  feature_tiled }}";
 
@@ -507,8 +505,7 @@ Ext.onReady(function (){
     map = new OpenLayers.Map({
         units: map_options["units"],
         maxResolution: map_options["maxResolution"],
-        projection: map_options["projection"],
-        restrictedExtent: extent
+        projection: map_options["projection"]
     });
 
     //definition of the world map layer
