--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -497,7 +497,6 @@ Ext.onReady(function (){
 
     var juris_vec_layer = new OpenLayers.Layer.Vector();
 
-    var extent = new OpenLayers.Bounds(8, 44.5, 19, 50);
     //definition of the Philippine grid layer
     var grid_layer_name = "geonode:{{  feature_tiled }}";
 
@@ -506,8 +505,7 @@ Ext.onReady(function (){
     map = new OpenLayers.Map({
       units: map_options["units"],
       maxResolution: map_options["maxResolution"],
-      projection: map_options["projection"],
-      restrictedExtent: extent
+      projection: map_options["projection"]
     });
 
     //definition of the world map layer
@@ -674,7 +672,7 @@ Ext.onReady(function (){
       map.addControl(drawControl);
       drawControl.activate();
     {% endif %}
-    //app = new GeoExt.MapPanel(config);
+    app = new GeoExt.MapPanel(config);
     if(jurisdiction_args ){
         map.zoomToExtent(jurisdiction_view_layer.getExtent());
         getJurisdictionGeom(jurisdiction_name.split(":")[1], juris_vec_layer);
