maptiles_geoext_map.html added extent

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -497,7 +497,8 @@ Ext.onReady(function (){
 
     var juris_vec_layer = new OpenLayers.Layer.Vector();
 
-    var extent = new OpenLayers.Bounds(8, 44.5, 19, 50);
+    //phil extent
+    var extent = new OpenLayers.Bounds(180, 0, 190, 10);
     //definition of the Philippine grid layer
     var grid_layer_name = "geonode:{{  feature_tiled }}";
 
