--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map2.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map2.html
@@ -673,17 +673,14 @@ Ext.onReady(function (){
         zoom: 7
     };
     app = new GeoExt.MapPanel(config);
-    var layerList = new GeoExt.tree.LayerContainer({
-      text: 'All Layers',
-      layerStore: mapPanel.layers,
-      leaf: false,
-      expanded: true
-    });
-    var layerTree = new Ext.tree.TreePanel({
-      title: 'Map Layers',
-      renderTo: 'layerTree',
-      root: layerList
-    });
+    new Ext.grid.GridPanel({
+    renderTo: 'layerTree',
+    height: 200, width: 200,
+    autoScroll: true,
+    store: mapPanel.layers,
+    columns: [{name: 'name', heading: 'Name'}]
+});
+    
 
     if(jurisdiction_args ){
         map.zoomToExtent(jurisdiction_view_layer.getExtent());
