--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map2.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map2.html
@@ -675,7 +675,7 @@ Ext.onReady(function (){
     app = new GeoExt.MapPanel(config);
     var layerList = new GeoExt.tree.LayerContainer({
       text: 'All Layers',
-      layerStore: mapPanel.layers,
+      layerStore: app.layers,
       leaf: false,
       expanded: true
     });
