made changes for maptiles_map2.html

--- a/geonode/maptiles/templates/maptiles/maptiles_map2.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map2.html
@@ -13,7 +13,7 @@
 <style>
 /*** custom checkboxes ***/
 
-    input[type=checkbox] { display:none; } /* to hide the checkbox itself */
+    /*input[type=checkbox] { display:none; } to hide the checkbox itself */
     input[type=checkbox] + label:before {
       font-family: FontAwesome;
       font-size: 16px;
@@ -92,6 +92,7 @@
 
  <br />
  <div id='layerTree'></div>
+ <br />
  <div  class ="page-header">
     <h3 class="page-title">Selected Tiles</h3>
  </div>
