Added images to help.html

--- a/geonode/templates/help.html
+++ b/geonode/templates/help.html
@@ -19,6 +19,7 @@
       <li>Click the <a href="/datarequests/register/">Register</a> button on the top-right corner of the page. After clicking, you will be redirected to the first part of the data request registration.</li>
       <li>You need to fill out the whole form in order to proceed to the next step of the registration process.</li>
       <li>After providing the required information, click the <strong>Continue</strong> button at the bottom-left part of the page.</li>
+      <img id="helpimg" src="{{STATIC_URL}}geonode/img/help/help_1.png">
       <li>If you forgot to fill out some fields or provided invalid input, you will be redirected to the same page. Fields that need proper input will be marked red, and messages will be shown regarding the error.</li>
       <li>
         <p>After providing the correct information, you will be redirected to the second step of the registration process. In this step, you will be required to provide a jurisdiction shapefile and answer the provided Captcha challenge.</p>
@@ -49,8 +50,6 @@
       <li>Click <strong>Sign EULA</strong></li>
       <li>Choose desired format of layer to be downloaded. Some files have the option to view the layer in Google Earth.</li>
       <li>Save file and wait for download to finish.</li>
-      <li></li>
-      <li></li>
     </ol>
     <h5 id="download-tiles">Downloading other datasets via Data Store/Data Tiles</h5>
     <ol>
