--- a/geonode/maptiles/templates/maptiles/maptiles_map2.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map2.html
@@ -17,7 +17,7 @@
     input[type=checkbox] + label:before {
       font-family: FontAwesome;
       font-size: 16px;
-      display: inline-block;
+      display: none;
     }
     img{
       display:inline-block;
