maptiles_map2.html fixed position of map's div, removed page title

--- a/geonode/maptiles/templates/maptiles/maptiles_map2.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map2.html
@@ -47,14 +47,11 @@
 <div id="notif">
 
 </div>
-<div class="page-header">
-  <h2 class="page-title">Map Tiles</h2>
-</div>
 <div class="row">
-    <div class="col-md-9">
-		<div id="embedded_map" class="mrg-btm">
-			<div id="preview_map" ></div>
-		</div>
+    <div class="col-md-9" style="position:fixed;bottom:0;left:0; width:100%">
+  		<div id="embedded_map" class="mrg-btm">
+  			<div id="preview_map" ></div>
+  		</div>
     </div>
     <div class="col-md-3">
         <ul class="list-group">
