--- a/geonode/templates/search/_general_filters.html
+++ b/geonode/templates/search/_general_filters.html
@@ -3,12 +3,12 @@
   <h4><a href="#" class="toggle toggle-nav"><i class="fa fa-chevron-right"></i> {% trans "Keywords" %}</a></h4>
   <ul class="nav closed" id="keywords">
 
-      <li ng-repeat="keyword in keywords" ng-if="keyword.count > 0">
+      <li ng-repeat="keyword in results">
         <a data-value="{{ keyword.slug }}" data-filter="keywords__slug__in" ng-click="multiple_choice_listener($event)" class="{{keyword.active}}">{{ keyword.name }}
           <span class="badge pull-right">{{ keyword.count }}</span>
         </a>
       </li>
-    
+
   </ul>
 </nav>
 <nav class="filter">
