at line 16 after ...]",f=function(b){a(b).on("click.bs.dropdown",this.toggle)};  removed:	f.prototype.toggle=function(d){var e=a(this);if(!e.is(".disabled, :disabled")){var f=c(e),g=f.hasClass("open");if(b(),!g){"ontouchstart"in document.documentElement&&!f.closest(".navbar-nav").length&&a('<div class="dropdown-backdrop"/>').insertAfter(a(this)).on("click",b);var h={relatedTarget:this};if(f.trigger(d=a.Event("show.bs.dropdown",h)),d.isDefaultPrevented())return;f.toggleClass("open").trigger("shown.bs.dropdown",h),e.focus()}return!1}},f.prototype.keydown=function(b){if(/(38|40|27)/.test(b.keyCode)){var d=a(this);if(b.preventDefault(),b.stopPropagation(),!d.is(".disabled, :disabled")){var f=c(d),g=f.hasClass("open");if(!g||g&&27==b.keyCode)return 27==b.which&&f.find(e).focus(),d.click();var h=" li:not(.divider):visible a",i=f.find("[role=menu]"+h+", [role=listbox]"+h);if(i.length){var j=i.index(i.filter(":focus"));38==b.keyCode&&j>0&&j--,40==b.keyCode&&j<i.length-1&&j++,~j||(j=0),i.eq(j).focus()}}}};

--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -53,16 +53,20 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             {% block tabs %}
-	    <li id="nav_datastore" class="dropdown">
-  	    	<a href="{% url "maptiles_main" %}" class="dropdown-toggle" data-toggle="dropdown">{% trans "Data Store" %} <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-		  <li><a href="{% url "maptiles_main" %}">{% trans "Data Tiles" %}</a></li>
-		  <li><a href="{% url "layer_browse" %}">{% trans "Layers" %}</a></li>
-		  <li><a href="{% url "maps_browse" %}">{% trans "Maps" %}</a></li>
-		</ul>
-	    </li>
+                  <li id="nav_datastore" class="dropdown">
+                      <a tabindex="0" href="/maptiles/" class="dropdown-toggle js-activated" data-toggle="dropdown" data-submenu>Data Store <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="/maptiles/">Data Tiles</a></li>
+                        <li class="dropdown-submenu"><a tabindex="0">ParentMenu</a>
+                          <ul class="dropdown-menu">
+                            <li><a tabindex="0" href="/layers/">Layers</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="/maps/">Maps</a></li>
+                      </ul>
+                  </li>
             <li id="nav_documents" class="dropdown">
-              <a href="{% url "document_browse" %}" class="dropdown-toggle" data-toggle="dropdown">{% trans "Documents" %} <span class="caret"></span></a>
+              <a href="{% url "document_browse" %}" class="dropdown-toggle js-activated" data-toggle="dropdown">{% trans "Documents" %} <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
 		<li><a href="{% url "document_browse" %}">{% trans "Documents" %}</a></li>
 		<li><a href="{% url "eula" %}">{% trans "EULA" %}</a></li>
