--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -274,6 +274,17 @@
     <script src="{{ STATIC_URL }}lib/js/waypoints.js"></script>
     {% else %}
     <script src="{{ STATIC_URL }}lib/js/assets.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+      <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+      <script src="https://cameronspear.com/downloads/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
+
+      <script>
+        // very simple to use!
+        $(document).ready(function() {
+          $('.js-activated').dropdownHover().dropdown();
+        });
+      </script>
+
     {% endif %}
     <script src="{{ STATIC_URL }}geonode/js/utils/utils.js"></script>
     <script src="{{ STATIC_URL }}geonode/js/base/base.js"></script>
