--- a/geonode/templates/maps/view.html
+++ b/geonode/templates/maps/view.html
@@ -224,18 +224,23 @@ var init = function() {
     <div id="dataTabs" class="x-hidden">
 
 <div id="searchDiv" style="background-color:#fff;width:100%;">
-<div style="float:left;position:relative;margin:10px;width:100%;height:256px;">
+<div style="position:relative;float:left;margin:10px;width:50%;height:500px;">
   <div class="block">
     <h2>{% trans "Search" %} <span class="subtitle">{% trans "for geospatial data" %}</span></h2>
-    <div id="search_form" style="width: 968px; height: 238px"></div>
+    <div id="search_form" style="height: 238px"></div>
+  </div>
+  <div id="refine" style="float:left;width:100%;padding-bottom:15px;">
+    <div class="bbox-controls">
+      <div class="bbox-expand">
+      </div>
+    </div>
   </div>
 </div>
 
 
 
-<div style="position:relative;float:right;width:100%;">
-
-  <div style="float:left;width:340px">
+<div style="position:relative;float:right;width:48%;">
+  <div style="">
     <div id="search_results" style="margin-left:15px;"></div>
     <div id="selection">
         <div id="data_cart" style="margin-left:15px;"></div>
@@ -243,13 +248,6 @@ var init = function() {
     <div id="data_ops">
     </div>
   </div>
-  <div id="refine" style="float:left;width:630px;padding-bottom:15px;">
-    <div class="bbox-controls">
-      <div class="bbox-expand">
-      </div>
-    </div>
-  </div>
-
 </div>
 </div>
         <div id="externalDiv"></div>
