--- a/geonode/templates/maps/view.html
+++ b/geonode/templates/maps/view.html
@@ -227,7 +227,7 @@ var init = function() {
 <div style="position:relative;float:left;margin:10px;width:50%;height:500px;">
   <div class="block">
     <h2>{% trans "Search" %} <span class="subtitle">{% trans "for geospatial data" %}</span></h2>
-    <div id="search_form" style="height: 238px"></div>
+    <div id="search_form"></div>
   </div>
   <div id="refine" style="float:left;width:100%;padding-bottom:15px;">
     <div class="bbox-controls">
@@ -242,6 +242,7 @@ var init = function() {
 <div style="position:relative;float:right;width:48%;">
   <div style="">
     <div id="search_results" style="margin-left:15px;"></div>
+    <div id="search_controls"></div>
     <div id="selection">
         <div id="data_cart" style="margin-left:15px;"></div>
     </div>
