Fixed width for items

--- a/geonode/templates/maps/view.html
+++ b/geonode/templates/maps/view.html
@@ -224,7 +224,7 @@ var init = function() {
     <div id="dataTabs" class="x-hidden">
 
 <div id="searchDiv" style="background-color:#fff;width:100%;">
-<div style="position:relative;float:left;margin:10px;width:50%;height:500px;">
+<div style="position:relative;float:left;margin:10px;width:600px;height:250px;">
   <div class="block">
     <h2>{% trans "Search" %} <span class="subtitle">{% trans "for geospatial data" %}</span></h2>
     <div id="search_form"></div>
@@ -239,7 +239,7 @@ var init = function() {
 
 
 
-<div style="position:relative;float:right;width:48%;">
+<div style="position:relative;float:right;width:360px;">
   <div style="">
     <div id="search_results" style="margin-left:15px;"></div>
     <div id="search_controls"></div>
