We dont need no search

--- a/geonode/templates/maps/view.html
+++ b/geonode/templates/maps/view.html
@@ -226,7 +226,6 @@ var init = function() {
 <div id="searchDiv" style="background-color:#fff;width:100%;">
 <div style="position:relative;float:left;margin:10px;width:600px;height:250px;">
   <div class="block">
-    <h2>{% trans "Search" %} <span class="subtitle">{% trans "for geospatial data" %}</span></h2>
     <div id="search_form"></div>
   </div>
   <div id="refine" style="float:left;width:100%;padding-bottom:15px;">
@@ -246,7 +245,7 @@ var init = function() {
     <div id="selection">
         <div id="data_cart" style="margin-left:15px;"></div>
     </div>
-    <div id="data_ops">
+    <div id="data_ops" style="margin-left: 15px; float:left">
     </div>
   </div>
 </div>
