--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -17,6 +17,7 @@
       {% else %}
       <link href="{{ STATIC_URL }}lib/css/assets.min.css" rel="stylesheet"/>
       {% endif %}
+      <link href="https://vsn4ik.github.io/bootstrap-submenu/dist/css/bootstrap-submenu.min.css" rel="stylesheet"/>
       <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css" rel="stylesheet" />
       <link href="{{ STATIC_URL }}geonode/css/base.css" rel="stylesheet" />
 
@@ -274,16 +275,14 @@
     <script src="{{ STATIC_URL }}lib/js/waypoints.js"></script>
     {% else %}
     <script src="{{ STATIC_URL }}lib/js/assets.min.js"></script>
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-      <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-      <script src="https://cameronspear.com/downloads/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
-
-      <script>
-        // very simple to use!
-        $(document).ready(function() {
-          $('.js-activated').dropdownHover().dropdown();
-        });
-      </script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cameronspear.com/downloads/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
+    <script>
+      // bootstrap hover: very simple to use!
+      $(document).ready(function() {
+        $('.js-activated').dropdownHover().dropdown();
+      });
+    </script>
 
     {% endif %}
     <script src="{{ STATIC_URL }}geonode/js/utils/utils.js"></script>
