geonode.templates.base.html changed dropdown names and href values

--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -58,9 +58,9 @@
                       <a tabindex="0" href="/maptiles/" class="dropdown-toggle js-activated" data-toggle="dropdown" data-submenu>Data Store <span class="caret"></span></a>
                       <ul class="dropdown-menu">
                         <li><a href="/maptiles/">Data Tiles</a></li>
-                        <li class="dropdown-submenu"><a tabindex="0">ParentMenu</a>
+                        <li class="dropdown-submenu"><a tabindex="0" href="/layers/">Layers</a>
                           <ul class="dropdown-menu">
-                            <li><a tabindex="0" href="/layers/">Layers</a></li>
+                            <li><a tabindex="0" href="/layers/?limit=100&offset=0&keywords__slug__in=flood-hazard-map">Flood Hazard Map</a></li>
                           </ul>
                         </li>
                         <li><a href="/maps/">Maps</a></li>
