appended additional form data in LayerInfo.js

--- a/geonode/datarequests/templates/datarequests/registration/shapefile.html
+++ b/geonode/datarequests/templates/datarequests/registration/shapefile.html
@@ -34,7 +34,7 @@
       </div>
 
       <div id="upload-status"></div>
-        <form id="file-uploader" method="post" enctype="multipart/form-data">
+        <form id="file-uploader" class="form-horizontal" method="post" enctype="multipart/form-data">
             {% crispy form %}
         </form>
         
