--- a/geonode/templates/maps/view.html
+++ b/geonode/templates/maps/view.html
@@ -224,7 +224,7 @@ var init = function() {
     <div id="dataTabs" class="x-hidden">
 
 <div id="searchDiv" style="background-color:#fff;width:100%;">
-<div style="position:relative;float:left;margin:10px;width:600px;height:250px;">
+<div style="position:relative;float:left;margin:10px;width:500px;height:250px;">
   <div class="block">
     <div id="search_form"></div>
   </div>
@@ -238,7 +238,7 @@ var init = function() {
 
 
 
-<div style="position:relative;float:right;width:360px;">
+<div style="position:relative;float:right;width:330px;margin-right:15px;">
   <div style="">
     <div id="search_results" style="margin-left:15px;"></div>
     <div id="search_controls"></div>
