--- a/src/geonode-client/app/static/theme/app/geoexplorer_white.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer_white.css
@@ -856,7 +856,7 @@ a.x-grid3-hd-btn {
 }
 
 .x-form-text, textarea.x-form-field {
-    color: #bbb;
+    color: #1a1a1a;
     background-color: #FFF;
     background-image: none;
     border-color: #d3d3d3;
@@ -951,28 +951,55 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
   border-color: #18469c !important;
   border-radius: 5px !important;
   color: #fff !important;
-  font-size: 12pt !important;
+  font-size: 14px !important;
   font-weight: bold;
-  height: 30px !important;
+  height: 25px !important;
   padding-left: 10px !important;
   padding-right: 10px !important;
-  padding-top: 3px !important;
-  padding-bottom:3px !important;
+  margin-top: -2px;
 }
 
 .x-btn .not-prominent-btn, .not-prominent-btn, .not-prominent-button button, ext-gecko .x-btn .not-prominent-button button {
   border-radius: 5px !important;
-  font-size: 12pt !important;
-  height: 30px !important;
+  font-size: 14px !important;
+  height: 25px !important;
   padding-left: 10px !important;
   padding-right: 10px !important;
-  padding-top: 3px !important;
-  padding-bottom:3px !important;
+  margin-top: -2px;
 }
 
 .search-bar{
     float: left;
 }
+
+.data-type{
+  float:left;
+  width: 140px;
+}
+
 #search_controls{
     margin-left: 20px;
+}
+
+.search-button {
+  margin-left: 20px;
+}
+
+.date-form{
+  margin-left: 56px;
+}
+
+.x-trigger-wrap-focus .x-form-trigger{
+  border-bottom: none !important;
+}
+
+.x-btn .small-btn, .small-btn, .small-button button, ext-gecko .x-btn .small-button button {
+  font-size: 12px !important;
+  height: 18px !important;
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+
+.pager-label {
+  top: 12px !important;
 }
