--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -34,15 +34,15 @@
         <p>
           <ol>
             <li><a href="/datarequests/register/">Register</a></li>
-            <li><a href="/help#home-select">Select</a></li>
-            <li><a href="/help#home-download">Download</a></li>
+            <li><a href="/help#registration-process">Request</a></li>
+            <li><a href="/help#download-tiles">Download</a></li>
           </ol>
         </p>
         <h2>Demo Videos</h2>
         <p>
-          <a data-toggle="modal" data-target="#modal-fhm">Download Flood Hazard Maps.</a>
+          <a data-toggle="modal" data-target="#modal-fhm" href="">Download Flood Hazard Maps.</a>
         </p><p>
-          <a data-toggle="modal" data-target="#modal-data">Download LiDAR data tiles.</a>
+          <a data-toggle="modal" data-target="#modal-data" href="">Download LiDAR data tiles.</a>
         </p>
         {% endblocktrans %}
       </div>
