--- a/geonode/cephgeo/templates/ceph_manager.html
+++ b/geonode/cephgeo/templates/ceph_manager.html
@@ -20,6 +20,7 @@
                 <h4><a href="{% url 'cephgeo.views.data_input' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Metadata Input</a></h4>
                 <h4><a href="{% url 'cephgeo.views.update_fh_style' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Update FH Style</a></h4>
                 <h4><a href="{% url 'cephgeo.views.update_layer_metadata' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Update FH Metadata</a></h4>
+                <h4><a href="{% url 'cephgeo.views.update_fh_perms' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Update FH Permissions</a></h4>
             </nav>
         </div>
     </div>
