Fix naming conflict between geonode and django-leaflet.

--- a/geonode/layers/templates/layers/layer_leaflet_map.html
+++ b/geonode/layers/templates/layers/layer_leaflet_map.html
@@ -38,7 +38,7 @@
 
         {% endif %}
         if (tile_layer != null) {
-            map.layerscontrol.addOverlay(tile_layer,"{{ resource.title }}");
+{#            map.layerscontrol.addOverlay(tile_layer,"{{ resource.title }}");#}
             map.addLayer(tile_layer);
         }
 
