added checking in datarequests.views.data_request_profile if request profile has a jurisdiction layer

--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -11,10 +11,12 @@
 {% block title %}{% trans "Data Request Profile" %} — {{ block.super }}{% endblock %}
 
 {% block head %}
-{% if preview == 'geoext' %}
-  {% include "layers/layer_geoext_map.html" %}
-{% else %}
-  {% include "layers/layer_leaflet_map.html" %}
+{% if resource %}
+    {% if preview == 'geoext' %}
+      {% include "layers/layer_geoext_map.html" %}
+    {% else %}
+      {% include "layers/layer_leaflet_map.html" %}
+    {% endif %}
 {% endif %}
 {{ block.super }}
 {% endblock %}
