--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -11,10 +11,12 @@
 {% block title %}{% trans "Data Request Profile" %} — {{ block.super }}{% endblock %}
 
 {% block head %}
-{% if preview == 'geoext' %}
-  {% include "layers/layer_geoext_map.html" %}
-{% else %}
-  {% include "layers/layer_leaflet_map.html" %}
+{% if resource %}
+    {% if preview == 'geoext' %}
+      {% include "layers/layer_geoext_map.html" %}
+    {% else %}
+      {% include "layers/layer_leaflet_map.html" %}
+    {% endif %}
 {% endif %}
 {{ block.super }}
 {% endblock %}
@@ -35,6 +37,10 @@
       <tr>
       <td class="table-user-profile-attribute col-md-3">{% trans "Requester" %}</td>
       <td>{{ request_profile.first_name }} {{ request_profile.middle_name }} {{ request_profile.last_name }}</td>
+      </tr>
+      <tr>
+      <td class="table-user-profile-attribute col-md-3">{% trans "Request Letter" %}</td>
+      <td><a href="{{ request_profile.request_letter.detail_url }}/download" >{{ request_profile.request_letter.title }}</a></td>
       </tr>
      <tr>
          <td class="table-user-profile-attribute col-md-3"> {% trans "User Name" %}</td>
@@ -98,7 +104,10 @@
       <td class="table-user-profile-attribute">{% trans "Intended Use of Dataset" %}</td>
       <td>{{ request_profile.get_intended_use_of_dataset_display }}</td>
       </tr>
-
+       <tr>
+          <td class="table-user-profile-attribute col-md-3">{% trans "Approval/Rejection Administrator" %}</td>
+          <td>{{request_profile.administrator.username}}</td>
+      </tr>
       {% if request_profile.requester_type == 'noncommercial' or request_profile.requester_type == 'academe' %}
         <tr>
         <td class="table-user-profile-attribute">{% trans "Organization type based on Phil-LiDAR1 Data Distribution Policy" %}</td>
