--- a/geonode/datarequests/templates/datarequests/registration/profile.html
+++ b/geonode/datarequests/templates/datarequests/registration/profile.html
@@ -15,10 +15,9 @@
   <div class="page-header">
     <h2 class="page-title">{% trans "Data Request Registration Form" %}</h2>
   </div>
-  <p>Step 1 of 2</p>
   <div class="row">
     <div class="col-md-6 col-md-offset-1">
-      <form action="" class="form-horizontal" method="post">{% csrf_token %}
+      <form action="" class="form-horizontal" method="post" enctype="multipart/form-data">{% csrf_token %}
         <div class="row">
           <div class="form-controls">
             {% crispy form %}
@@ -30,7 +29,10 @@
       </form>
     </div>
   </div>
-
+<!--<section>
+        <a href="{% url 'datarequests:registration_part_one' %}" class="btn btn-default btn-md" style="margin-top: 20px;">{% trans "Prev Step" %}</a>
+        <a href="#" id="upload-button" class="btn btn-primary btn-md">{% trans "Submit" %}</a>
+      </section>-->
 {% endblock body %}
  {% block sidebar %}{% endblock sidebar %}
 {% endblock body_outer %}
