--- a/geonode/maptiles/templates/maptiles/maptiles_map2.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map2.html
@@ -14,10 +14,10 @@
 /*** custom checkboxes ***/
 
     /*input[type=checkbox] { display:none; } to hide the checkbox itself */
-    input[type=checkbox] + label:before {
+    input[type=checkbox]/* + label:before */{
       font-family: FontAwesome;
       font-size: 16px;
-      display: inline-block;
+      display: none;
     }
     img{
       display:inline-block;
@@ -47,19 +47,16 @@
 <div id="notif">
 
 </div>
-<div class="page-header">
-  <h2 class="page-title">Map Tiles</h2>
-</div>
 <div class="row">
-    <div class="col-md-9">
-		<div id="embedded_map" class="mrg-btm">
-			<div id="preview_map" ></div>
-		</div>
+    <div class="col-md-9" style="position:fixed;bottom:0;left:0; width:100%">
+  		<div id="embedded_map" class="mrg-btm">
+  			<div id="preview_map" ></div>
+  		</div>
     </div>
     <div class="col-md-3">
         <ul class="list-group">
             <li class="list-group-item">
-	<h4 class="list-group-item-heading">Bounding Box Selection</h4>
+		<h4 class="list-group-item-heading">Bounding Box Selection</h4>
                 <form id="bbox_form">
                     (EPSG:900913 decimal degrees) <br />
                     <table>
@@ -70,7 +67,6 @@
                     </table> <br />
                     <input type="submit" id="bbox_submit" name="bbox_submit" value="Submit Bounding Box" class="btn btn-default" />
                 </form>
-            </li>
             </li>
             <!--<li class="list-group-item">
                	<h4 class="list-group-item-heading">Area of Interest</h4>
