Remove reset button in leaflet.

--- a/geonode/layers/templates/layers/layer_leaflet_map.html
+++ b/geonode/layers/templates/layers/layer_leaflet_map.html
@@ -38,8 +38,7 @@
 
         {% endif %}
         if (tile_layer != null) {
-            layerControl = L.control.layers().addTo(map);
-            layerControl.addOverlay(tile_layer , "{{ resource.title }}");
+            map.addLayer(tile_layer);
         }
 
         if (L.control.hasOwnProperty('fullscreen')) {
@@ -52,6 +51,7 @@
             [bbox[1], bbox[0]],
             [bbox[3], bbox[2]]
         ];
+        console.log(bounds);
         map.fitBounds(bounds);
     }
 </script>
