--- a/geonode/layers/templates/layers/layer_leaflet_map.html
+++ b/geonode/layers/templates/layers/layer_leaflet_map.html
@@ -38,6 +38,8 @@
 
         {% endif %}
         if (tile_layer != null) {
+            layerControl = L.control.layers().addTo(map);
+            layerControl.addOverlay(tile_layer , "{{ resource.title }}");
             map.addLayer(tile_layer);
         }
 
