created view and templates for displaying requests to user

--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -241,6 +241,8 @@
               <li><a href="{% url "account_invite_user" %}"><i class="fa fa-edit"></i> {% trans "Invite User" %}</a></li>
               <li class="modal-divider"></li>
               <li><a href="{{ GEOSERVER_BASE_URL }}"><i class="fa fa-gears"></i> {% trans "GeoServer" %}</a></li>
+              {% else %}
+              <li><a href="{% url "datarequests:request_history" %}"><i class="fa fa-users"></i> {% trans "Data Request Profiles" %}</a></li>
               {% endif %}
               {% if user.is_staff %}
               <li><a href="{% url "admin:index" %}"><i class="fa fa-cog"></i> {% trans "Admin" %}</a></li>
