created join_requester_grp, assign_jurisdiction, update_profile_details, create_directory, set_approved in DataRequestProfile model to be called in datarequests.views

--- a/geonode/datarequests/templates/datarequests/registration/profile.html
+++ b/geonode/datarequests/templates/datarequests/registration/profile.html
@@ -11,6 +11,8 @@
 
 {% block body_outer %}
   {% block body %}
+  
+  
 
   <div class="page-header">
     <h2 class="page-title">{% trans "Data Request Registration Form" %}</h2>
@@ -40,6 +42,9 @@
 
 {% block extra_script %}
 <script src="{{ STATIC_URL }}geonode/js/datarequests/registration.js"></script>
+<script>
+    console.log("{{profile_form_data}}")
+</script>
 {% endblock extra_script %}
 
 
